--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-remote_theme: chesterhow/tale
+remote_theme: Merlot
 
 permalink:    /:year-:month-:day/:title
 paginate:     5
